use interface instead of class for model

--- a/src/app/read/text/content/content.component.html
+++ b/src/app/read/text/content/content.component.html
@@ -1,15 +1,15 @@
 <div class="max-w-minus-1">
-  <ng-container *ngFor="let c of contents">
-    <ng-container *ngIf="c.isHeading">
-      <ks-heading [heading]="c" [fnByRef]="fnByRef"></ks-heading>
-    </ng-container>
-
-    <ng-container *ngIf="!c.isHeading">
-      <ks-paragraph
-        [paragraph]="c"
-        [fnByRef]="fnByRef"
-        [summByRef]="summByRef"
-      ></ks-paragraph>
-    </ng-container>
+  @for (c of contents; track c.ordinal) {
+  <ng-container *ngIf="c.isHeading">
+    <ks-heading [heading]="c" [fnByRef]="fnByRef"></ks-heading>
   </ng-container>
+
+  <ng-container *ngIf="!c.isHeading">
+    <ks-paragraph
+      [paragraph]="c"
+      [fnByRef]="fnByRef"
+      [summByRef]="summByRef"
+    ></ks-paragraph>
+  </ng-container>
+  }
 </div>
