--- a/src/app/read/text/text.component.html
+++ b/src/app/read/text/text.component.html
@@ -1,5 +1,5 @@
 <div nz-flex nzJustify="center">
-  <div class="max-w-base">
+  <div>
     <ng-container *ngIf="isLoaded$ | async">
       <ks-read-toc
         [work]="work$ | async"
