--- a/src/app/search/results/paragraph-dialog/paragraph-dialog.component.html
+++ b/src/app/search/results/paragraph-dialog/paragraph-dialog.component.html
@@ -1,5 +1,6 @@
 <nz-modal
   [(nzVisible)]="isVisible"
+  nzWidth="50rem"
   nzTitle="#{{ data.index }} {{
     ('COMMON.VOLUME' | translate) + ' ' + getWorkTitle()
   }}"
