improve work title translation

--- a/src/app/read/text/text.component.html
+++ b/src/app/read/text/text.component.html
@@ -7,6 +7,18 @@
       >
       </ks-read-toc>
 
+      <nz-divider
+        [nzText]="
+          'COMMON.VOL_WORK_TITLE'
+            | translate
+              : {
+                  volumeNumber: (work$ | async)?.volumeNumber ?? 0,
+                  title: (work$ | async)?.title ?? ''
+                }
+        "
+      >
+      </nz-divider>
+
       <ks-content
         [contents]="(textContents$ | async) || []"
         [fnByRef]="footnoteByRef$ | async"
