--- a/src/app/read/text/toc/toc.component.html
+++ b/src/app/read/text/toc/toc.component.html
@@ -1,7 +1,10 @@
+<nz-divider [nzText]="'READ.TOC.TITLE' | translate"></nz-divider>
+
 <ng-container *ngFor="let sec of work?.sections">
   <ks-toc-section
-    [level]="1"
+    [level]="0"
     [section]="sec"
     [headByOrdinal]="headByOrdinal"
+    (onClickEmitter)="onClick($event)"
   ></ks-toc-section>
 </ng-container>
