--- a/src/styles.less
+++ b/src/styles.less
@@ -14,13 +14,13 @@ body {
   width: 100%;
   max-width: 650px;
 }
-.max-w-minus-1 {
-  width: 100%;
-  max-width: 600px;
-}
-.max-w-minus-2 {
+.max-w-paragraph-text {
   width: 100%;
   max-width: 550px;
+}
+.max-w-footnote-text {
+  width: 100%;
+  max-width: 500px;
 }
 
 :root {
@@ -156,4 +156,7 @@ ks-fmt-tracked {
 
 .cursor-pointer {
   cursor: pointer;
+}
+.hover-background:hover {
+  background-color: #f0f0f0; /* Light grey */
 }
