add h7 and h8 heading styles

--- a/src/styles.less
+++ b/src/styles.less
@@ -98,34 +98,50 @@ ks-fmt-h2 {
 
 ks-fmt-h3 {
   display: block;
-  font-size: 1.17rem;
+  font-size: 1.25rem;
   font-weight: bold;
   margin: 0.83rem 0;
-  line-height: 1.4;
+  line-height: 1.35;
 }
 
 ks-fmt-h4 {
   display: block;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: bold;
-  margin: 1.12rem 0;
-  line-height: 1.5;
+  margin: 1rem 0;
+  line-height: 1.4;
 }
 
 ks-fmt-h5 {
   display: block;
-  font-size: 0.83rem;
+  font-size: 0.95rem;
+  font-weight: bold;
+  margin: 1.17rem 0;
+  line-height: 1.5;
+}
+
+ks-fmt-h6 {
+  display: block;
+  font-size: 0.85rem;
+  font-weight: bold;
+  margin: 1.33rem 0;
+  line-height: 1.6;
+}
+
+ks-fmt-h7 {
+  display: block;
+  font-size: 0.75rem;
   font-weight: bold;
   margin: 1.5rem 0;
   line-height: 1.6;
 }
 
-ks-fmt-h6 {
+ks-fmt-h8 {
   display: block;
-  font-size: 0.75rem;
+  font-size: 0.65rem;
   font-weight: bold;
   margin: 1.67rem 0;
-  line-height: 1.6;
+  line-height: 1.7;
 }
 
 ks-fmt-hpar {
