update translation files

--- a/src/app/search/results/paragraph-dialog/paragraph-dialog.component.html
+++ b/src/app/search/results/paragraph-dialog/paragraph-dialog.component.html
@@ -17,10 +17,10 @@
         nz-button
         nzType="primary"
         nz-tooltip
-        [nzTooltipTitle]="'SEARCH.RESULTS.GO_TO_TEXT_TOOLTIP' | translate"
+        [nzTooltipTitle]="'SEARCH.RESULTS.NAV_FULLTEXT_BTN.TOOLTIP' | translate"
         (click)="onNavigate()"
       >
-        {{ "SEARCH.RESULTS.GO_TO_TEXT_LABEL" | translate }}
+        {{ "SEARCH.RESULTS.NAV_FULLTEXT_BTN.TEXT" | translate }}
         <nz-icon nzType="arrow-right" />
       </button>
     </div>
