remove all primeng dependencies

--- a/src/app/common/shared/link-button/link-button.component.html
+++ b/src/app/common/shared/link-button/link-button.component.html
@@ -1,7 +1,4 @@
-<button
-  class="anchor-button"
-  (click)="addAnchor($event)"
-  pTooltip="{{ 'COMMON.ANCHOR_BUTTON_TOOLTIP' | translate }}"
->
+<!-- TODO pTooltip="{{ 'COMMON.ANCHOR_BUTTON_TOOLTIP' | translate }}" -->
+<button class="anchor-button" (click)="addAnchor($event)">
   <i class="pi pi-link"></i>
 </button>
