fix missing module imports

--- a/src/app/app/navbar/navbar.component.html
+++ b/src/app/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<ul nz-menu nzMode="horizontal" nz-flex>
+<ul nz-flex nz-menu nzMode="horizontal">
   <li nz-menu-item nzMatchRouter>
     <a [routerLink]="['/', currentLanguage$ | async, 'start']">
       <nz-icon nzType="home" />
