--- a/src/app/search/results/result-list/result-list.component.html
+++ b/src/app/search/results/result-list/result-list.component.html
@@ -1,3 +1,4 @@
+<!-- TODO move this to new result count component -->
 <ng-container *ngIf="results.length === 0">
   <div nz-flex nzJustify="center">
     <p>{{ "SEARCH.RESULTS.NONE_FOUND" | translate }}</p>
