--- a/src/app/search/results/results.component.html
+++ b/src/app/search/results/results.component.html
@@ -20,3 +20,19 @@
   [data]="hitData"
   (navigateEmitter)="onFullTextNavigation($event)"
 ></ks-paragraph-dialog>
+
+<ng-container *ngIf="showUpButton">
+  <div class="ks-scroll-to-top">
+    <nz-float-button
+      nzType="default"
+      [nzIcon]="icon"
+      (click)="scrollTop()"
+      nz-tooltip
+      [nzTooltipTitle]="'COMMON.SCROLL_TOP_TOOLTIP' | translate"
+    ></nz-float-button>
+  </div>
+</ng-container>
+
+<ng-template #icon>
+  <nz-icon nzType="up" nzTheme="outline" />
+</ng-template>
