implement work info component

--- a/src/app/read/selection/selection.component.html
+++ b/src/app/read/selection/selection.component.html
@@ -2,7 +2,7 @@
   <nz-space nzDirection="vertical" class="w-full">
     <div *nzSpaceItem></div>
 
-    <h2 *nzSpaceItem nz-typography>{{ "READ.SELECTION.TITLE" | translate }}</h2>
+    <h2 *nzSpaceItem nz-typography>{{ "READ.SELECTION" | translate }}</h2>
 
     <nz-tree
       *nzSpaceItem
