--- a/src/app/read/text/toc/toc.component.html
+++ b/src/app/read/text/toc/toc.component.html
@@ -1,4 +1,4 @@
-<nz-divider [nzText]="'READ.TOC.TITLE' | translate"></nz-divider>
+<nz-divider [nzText]="'READ.TOC.HEADER' | translate"></nz-divider>
 
 <ng-container *ngFor="let sec of work?.sections">
   <ks-toc-section
