--- a/src/app/read/text/toc/toc.component.html
+++ b/src/app/read/text/toc/toc.component.html
@@ -1,20 +1,22 @@
-<nz-divider [nzText]="'READ.TOC.HEADER' | translate"></nz-divider>
+<ng-container *ngIf="work.sections.length > 0">
+  <nz-divider [nzText]="'READ.TOC.HEADER' | translate"></nz-divider>
 
-<div nz-flex nzJustify="space-between">
-  <div style="margin-left: 4px">
-    <b>{{ "READ.TOC.SECTION" | translate }}</b>
+  <div nz-flex nzJustify="space-between">
+    <div style="margin-left: 4px">
+      <b>{{ "READ.TOC.SECTION" | translate }}</b>
+    </div>
+
+    <div style="margin-right: 4px">
+      <b>{{ "READ.TOC.PAGE" | translate }}</b>
+    </div>
   </div>
 
-  <div style="margin-right: 4px">
-    <b>{{ "READ.TOC.PAGE" | translate }}</b>
-  </div>
-</div>
-
-<ng-container *ngFor="let sec of work?.sections">
-  <ks-toc-section
-    [level]="0"
-    [section]="sec"
-    [headByOrdinal]="headByOrdinal"
-    (onClickEmitter)="onClick($event)"
-  ></ks-toc-section>
+  <ng-container *ngFor="let sec of work?.sections">
+    <ks-toc-section
+      [level]="0"
+      [section]="sec"
+      [headByOrdinal]="headByOrdinal"
+      (onClickEmitter)="onClick($event)"
+    ></ks-toc-section>
+  </ng-container>
 </ng-container>
