--- a/src/app/search/results/paragraph-dialog/paragraph-dialog.component.html
+++ b/src/app/search/results/paragraph-dialog/paragraph-dialog.component.html
@@ -1,11 +1,7 @@
 <nz-modal
   [(nzVisible)]="isVisible"
   nzWidth="40rem"
-  nzTitle="#{{ data.index }} {{
-    'COMMON.VOL_WORK_TITLE'
-      | translate
-        : { volumeNumber: data.work.volumeNumber, title: getWorkTitle() }
-  }}"
+  [nzTitle]="modalTitle"
   [nzFooter]="null"
   (nzOnCancel)="onHide()"
 >
@@ -26,3 +22,13 @@
     </div>
   </ng-container>
 </nz-modal>
+
+<ng-template #modalTitle>
+  <i>#{{ data.index }}</i>
+
+  {{
+    "COMMON.VOL_WORK_TITLE"
+      | translate
+        : { volumeNumber: data.work.volumeNumber, title: getWorkTitle() }
+  }}
+</ng-template>
