--- a/src/styles.less
+++ b/src/styles.less
@@ -42,134 +42,6 @@ body {
   clear: both;
 }
 
-// TODO (same for ks-meta-page): before and after chars are not usable in browser search
-.ks-meta-fnref,
-ks-meta-fnref {
-  font-size: 0.8rem;
-  position: relative;
-  top: -0.2em;
-  color: var(--color-dark-grey);
-  &::before {
-    content: "(";
-  }
-  &::after {
-    content: ")";
-  }
-}
-
-ks-meta-line {
-  display: none;
-}
-
-ks-meta-page {
-  font-size: 0.75rem;
-  font-weight: normal;
-  color: var(--color-dark-grey);
-  &::before {
-    content: "[";
-  }
-  &::after {
-    content: "]";
-  }
-}
-
-ks-meta-hit {
-  font-weight: bold;
-}
-
-ks-fmt-bold {
-  font-weight: bold;
-}
-
-ks-fmt-emph {
-  font-style: italic;
-}
-
-ks-fmt-emph2 {
-  font-style: italic;
-  letter-spacing: 0.1em;
-}
-
-ks-fmt-formula {
-  font-family: "Cambria Math", "STIX Math", "Latin Modern Math", serif;
-  margin: 0 0.25em;
-}
-
-ks-fmt-h1 {
-  display: block;
-  font-size: 2rem;
-  font-weight: bold;
-  margin: 0.67rem 0;
-  line-height: 1.2;
-}
-
-ks-fmt-h2 {
-  display: block;
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin: 0.75rem 0;
-  line-height: 1.3;
-}
-
-ks-fmt-h3 {
-  display: block;
-  font-size: 1.25rem;
-  font-weight: bold;
-  margin: 0.83rem 0;
-  line-height: 1.35;
-}
-
-ks-fmt-h4 {
-  display: block;
-  font-size: 1.1rem;
-  font-weight: bold;
-  margin: 1rem 0;
-  line-height: 1.4;
-}
-
-ks-fmt-h5 {
-  display: block;
-  font-size: 0.95rem;
-  font-weight: bold;
-  margin: 1.17rem 0;
-  line-height: 1.5;
-}
-
-ks-fmt-h6 {
-  display: block;
-  font-size: 0.85rem;
-  font-weight: bold;
-  margin: 1.33rem 0;
-  line-height: 1.6;
-}
-
-ks-fmt-h7 {
-  display: block;
-  font-size: 0.75rem;
-  font-weight: bold;
-  margin: 1.5rem 0;
-  line-height: 1.6;
-}
-
-ks-fmt-h8 {
-  display: block;
-  font-size: 0.65rem;
-  font-weight: bold;
-  margin: 1.67rem 0;
-  line-height: 1.7;
-}
-
-ks-fmt-hpar {
-  display: block;
-  text-align: center;
-  font-style: italic;
-  margin: 0 5rem;
-}
-
-ks-fmt-tracked {
-  letter-spacing: 0.1em;
-}
-
 .ks-scroll-to-top {
   position: fixed;
   bottom: 10px;
@@ -190,4 +62,121 @@ ks-fmt-tracked {
 }
 .hover-background:hover {
   background-color: #f0f0f0; /* Light grey */
+  border-radius: 3px;
+}
+.background-inside {
+  margin: 0 4px;
+}
+
+// TODO (same for ks-meta-page): before and after chars are not usable in browser search
+.ks-meta-fnref,
+ks-meta-fnref {
+  font-size: 0.8rem;
+  position: relative;
+  top: -0.2em;
+  color: var(--color-dark-grey);
+  &::before {
+    content: "(";
+  }
+  &::after {
+    content: ")";
+  }
+}
+ks-meta-line {
+  display: none;
+}
+ks-meta-page {
+  font-size: 0.75rem;
+  font-weight: normal;
+  color: var(--color-dark-grey);
+  &::before {
+    content: "[";
+  }
+  &::after {
+    content: "]";
+  }
+}
+ks-meta-hit {
+  font-weight: bold;
+}
+
+ks-fmt-h1 {
+  display: block;
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 0.67rem 0;
+  line-height: 1.2;
+}
+ks-fmt-h2 {
+  display: block;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0.75rem 0;
+  line-height: 1.3;
+}
+ks-fmt-h3 {
+  display: block;
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin: 0.83rem 0;
+  line-height: 1.35;
+}
+ks-fmt-h4 {
+  display: block;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin: 1rem 0;
+  line-height: 1.4;
+}
+ks-fmt-h5 {
+  display: block;
+  font-size: 0.95rem;
+  font-weight: bold;
+  margin: 1.17rem 0;
+  line-height: 1.5;
+}
+ks-fmt-h6 {
+  display: block;
+  font-size: 0.85rem;
+  font-weight: bold;
+  margin: 1.33rem 0;
+  line-height: 1.6;
+}
+ks-fmt-h7 {
+  display: block;
+  font-size: 0.75rem;
+  font-weight: bold;
+  margin: 1.5rem 0;
+  line-height: 1.6;
+}
+ks-fmt-h8 {
+  display: block;
+  font-size: 0.65rem;
+  font-weight: bold;
+  margin: 1.67rem 0;
+  line-height: 1.7;
+}
+
+ks-fmt-bold {
+  font-weight: bold;
+}
+ks-fmt-emph {
+  font-style: italic;
+}
+ks-fmt-emph2 {
+  font-style: italic;
+  letter-spacing: 0.1em;
+}
+ks-fmt-formula {
+  font-family: "Cambria Math", "STIX Math", "Latin Modern Math", serif;
+  margin: 0 0.25em;
+}
+ks-fmt-hpar {
+  display: block;
+  text-align: center;
+  font-style: italic;
+  margin: 0 5rem;
+}
+ks-fmt-tracked {
+  letter-spacing: 0.1em;
 }
